# mnist-helloworld

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  train.py
docs/: README.md  configuration.md  dataset.md  index.md  model.md  training.md
gui-example/: main_gui.py
src/config/: config.py
src/datasets/: __init__.py  base.py  cifar.py  mnist.py  registry.py  subset_1000.py  subset_631.py  triplet_mnist.py  utils.py
src/models/: __init__.py  alexnet.py  base.py  bottleneck_vit.py  bottleneck_vit_fpn.py  common.py  fpn_moe_vit.py  fpn_vit.py  lenet.py  mynet.py  registry.py  siamese.py
src/training/: __init__.py  annealing.py  checkpoint.py  experiment.py  metrics.py  trainer.py
src/utils/: device.py  logger.py  qdrant_search.py
tests/: conftest.py  test_annealing.py  test_config.py  test_datasets.py  test_datasets_base.py  test_datasets_utils.py  test_device.py  test_freeze.py  test_imports.py  test_integration.py  test_models.py  test_models_common.py  test_optimizer.py  test_scheduler.py  test_training.py  test_training_loop.py
